--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.7'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.2.2'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     //tert unitarios
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -59,9 +60,17 @@ dependencies {
     annotationProcessor"androidx.room:room-compiler:2.4.3"
 
     //corrutinas
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     //hilt inyeccion de dependencias
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt 'com.google.dagger:hilt-android-compiler:2.28-alpha'
 
+    //viewmodel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    //lifedata
+    implementation'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01"
 }
