--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,12 @@
 buildscript {
+
+    repositories {
+        google()
+        jcenter()
+    }
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath 'com.google.gms:google-services:4.3.13'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
     }
@@ -10,6 +17,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
